brat/test/golden/error/kbadvec4.brat
f :: { Vec(Bool, 3) -> Bool }
f = { [1,2] => true }
